--- a/build.gradle
+++ b/build.gradle
@@ -69,8 +69,14 @@ dependencies {
   testCompile ('junit:junit:4.11')
   testCompile ("com.adaptris:adp-stubs:$adpCoreVersion") { changing= true}
   testCompile ("com.fasterxml.jackson.core:jackson-databind:2.7.0")
+  testCompile ("pl.allegro.tech:embedded-elasticsearch:2.1.0")
+  testCompile ("org.apache.logging.log4j:log4j-core:2.8.1")
+  testCompile ("org.apache.logging.log4j:log4j-1.2-api:2.8.1")
+  testCompile ("org.apache.logging.log4j:log4j-slf4j-impl:2.8.1")
+  testCompile ("org.apache.logging.log4j:log4j-api:2.8.1")
 
   javadoc("com.adaptris:adp-core-apt:$adpCoreVersion") { changing= true}
+
 }
 
 
