--- a/build.gradle
+++ b/build.gradle
@@ -65,10 +65,10 @@ dependencies {
   compile ("org.elasticsearch.plugin:transport-netty4-client:5.2.2")
   compile ("io.netty:netty-all:4.1.7.Final")
   compile ("com.jayway.jsonpath:json-path:2.2.0")
+  compile ("com.fasterxml.jackson.core:jackson-databind:2.7.0")
 
   testCompile ('junit:junit:4.11')
   testCompile ("com.adaptris:adp-stubs:$adpCoreVersion") { changing= true}
-  testCompile ("com.fasterxml.jackson.core:jackson-databind:2.7.0")
   testCompile ("pl.allegro.tech:embedded-elasticsearch:2.1.0")
   testCompile ("org.apache.logging.log4j:log4j-core:2.8.1")
   testCompile ("org.apache.logging.log4j:log4j-1.2-api:2.8.1")
