--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ ext {
   repoUsername = project.hasProperty('repoUsername') ? project.getProperty('repoUsername') : 'unknown'
   repoPassword = project.hasProperty('repoPassword') ? project.getProperty('repoPassword') : 'unknown'
   defaultNexusRepo = project.hasProperty('defaultNexusRepo') ? project.getProperty('defaultNexusRepo') : 'https://repo1.maven.org/maven2/'
+  interlokJavadocs= project.hasProperty('interlokJavadocs') ? project.getProperty('interlokJavadocs') : 'https://development.adaptris.net/javadocs/latest/Interlok-API/'
+  interlokCommonJavadocs= project.hasProperty('interlokJavadocs') ? project.getProperty('interlokJavadocs') : 'https://development.adaptris.net/javadocs/latest/Interlok-Common/'
   componentName='Interlok/ElasticSearch (5+) Integration'
   organizationName = "Adaptris Ltd"
   organizationUrl = "http://interlok.adaptris.net"
-  slf4jVersion = '1.7.12'
+  slf4jVersion = '1.7.25'
 }
 
 if (JavaVersion.current().isJava8Compatible()) {
@@ -112,10 +114,10 @@ task generateVersion {
 
 javadoc {
   configure(options) {
-    links = [
-            "http://development.adaptris.com/javadocs/v3-snapshot/Interlok-API/",
-            "http://development.adaptris.net/javadocs/v3-snapshot/Interlok-Common/",
-    ]
+      links = [
+        interlokJavadocs,
+        interlokCommonJavadocs,
+      ]
     taglets = ["com.adaptris.taglet.ConfigTaglet", "com.adaptris.taglet.LicenseTaglet"]
     options.addStringOption "tagletpath", configurations.javadoc.asPath
   }
