--- a/build.gradle
+++ b/build.gradle
@@ -58,10 +58,7 @@ configurations {
   all*.exclude group: 'net.sf.saxon', module: 'saxon'
   all*.exclude group: 'org.codehaus.woodstox'
   all*.exclude group: 'org.eclipse.jetty.orbit', module: 'javax.mail.glassfish'
-  all*.exclude group: 'io.netty', module: 'netty-buffer'
-  all*.exclude group: 'io.netty', module: 'netty-codec'
-  all*.exclude group: 'io.netty', module: 'netty-codec-http'
-  all*.exclude group: 'io.netty', module: 'netty-handler'
+
 
 }
 
@@ -74,7 +71,12 @@ dependencies {
   compile ("org.slf4j:slf4j-api:$slf4jVersion")
   compile ("com.adaptris:adp-simple-csv:$adpCoreVersion") { changing=true}
   compile ("org.elasticsearch:elasticsearch:5.2.2")
-  compile ("org.elasticsearch.plugin:transport-netty4-client:5.2.2")
+  compile ("org.elasticsearch.plugin:transport-netty4-client:5.2.2") {
+      exclude group: 'io.netty', module: 'netty-buffer'
+      exclude group: 'io.netty', module: 'netty-codec'
+      exclude group: 'io.netty', module: 'netty-codec-http'
+      exclude group: 'io.netty', module: 'netty-handler'
+  }
   compile ("io.netty:netty-all:4.1.9.Final")
   compile ("com.jayway.jsonpath:json-path:2.2.0")
   compile ("com.fasterxml.jackson.core:jackson-databind:2.8.11.1")
