--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,8 @@ task generateVersion {
     ant.propertyfile(file: versionFile) {
       entry(key: 'component.name', value: componentName)
       entry(key: 'build.version', value: releaseVersion)
+      entry(key: 'groupId', value: "com.adaptris")
+      entry(key: 'artifactId', value: project.name)
       entry(key: 'build.date', value: new Date().format('yyyy-MM-dd'))
     }
   }
@@ -167,6 +169,8 @@ publishing {
         def properties = asNode().appendNode("properties")
         properties.appendNode("externalUrl", "https://www.elastic.co/products/elasticsearch")
         properties.appendNode("target", "3.5.0+")
+        properties.appendNode("tags", "elasticsearch")
+        properties.appendNode("license", "false")
       }
     }
   }
