--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,13 @@ jacoco {
   toolVersion="0.8.1"
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
+
 task javadocJar(type: Jar, dependsOn: javadoc) {
   classifier = 'javadoc'
   from javadoc.destinationDir
