Add name to the pom file.

--- a/build.gradle
+++ b/build.gradle
@@ -173,6 +173,7 @@ publishing {
       artifact examplesJar { classifier "examples" }
 
       pom.withXml {
+        asNode().appendNode("name", componentName)
         asNode().appendNode("description", "Connect and insert documents into ElasticSearch v5+ via version 5.x of their API")
         def properties = asNode().appendNode("properties")
         properties.appendNode("externalUrl", "https://www.elastic.co/products/elasticsearch")
