--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ dependencies {
   compile ("io.netty:netty-all:4.1.9.Final")
   compile ("com.jayway.jsonpath:json-path:2.4.0")
   compile ("com.fasterxml.jackson.core:jackson-databind:2.9.6")
+  annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
 
   testCompile ('junit:junit:4.12')
   testCompile ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing= true}
