--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,8 @@ dependencies {
       exclude group: 'io.netty', module: 'netty-codec'
       exclude group: 'io.netty', module: 'netty-codec-http'
       exclude group: 'io.netty', module: 'netty-handler'
+      exclude group: 'io.netty', module: 'netty-transport'
+      exclude group: 'io.netty', module: 'netty-resolver'
   }
   compile ("io.netty:netty-all:4.1.9.Final")
   compile ("com.jayway.jsonpath:json-path:2.4.0")
