--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,19 @@
 ext {
   interlokCoreVersion = project.hasProperty('interlokCoreVersion') ? project.getProperty('interlokCoreVersion') : '3.8-SNAPSHOT'
   releaseVersion = project.hasProperty('releaseVersion') ? project.getProperty('releaseVersion') : '3.8-SNAPSHOT'
-  mavenPublishUrl = project.hasProperty('mavenPublishUrl') ? project.getProperty('mavenPublishUrl') : 'https://nexus.adaptris.net/nexus/content/repositories/snapshots'
+  nexusBaseUrl = project.hasProperty('nexusBaseUrl') ? project.getProperty('nexusBaseUrl') : 'https://nexus.adaptris.net/nexus'
+  mavenPublishUrl = project.hasProperty('mavenPublishUrl') ? project.getProperty('mavenPublishUrl') : nexusBaseUrl + '/content/repositories/snapshots'
+  javadocsBaseUrl = nexusBaseUrl + "/content/sites/javadocs/com/adaptris"
   repoUsername = project.hasProperty('repoUsername') ? project.getProperty('repoUsername') : 'unknown'
   repoPassword = project.hasProperty('repoPassword') ? project.getProperty('repoPassword') : 'unknown'
   defaultNexusRepo = project.hasProperty('defaultNexusRepo') ? project.getProperty('defaultNexusRepo') : 'https://repo1.maven.org/maven2/'
-  javadocsBaseUrl = "https://nexus.adaptris.net/nexus/content/sites/javadocs/com/adaptris"
   interlokJavadocs= project.hasProperty('interlokJavadocs') ? project.getProperty('interlokJavadocs') : javadocsBaseUrl + "/interlok-core/" + interlokCoreVersion
   interlokCommonJavadocs= project.hasProperty('interlokJavadocs') ? project.getProperty('interlokJavadocs') : javadocsBaseUrl + "/interlok-common/" + interlokCoreVersion
   componentName='Interlok/ElasticSearch (5+) Integration'
   organizationName = "Adaptris Ltd"
   organizationUrl = "http://interlok.adaptris.net"
   slf4jVersion = '1.7.25'
+  log4j2Version = '2.9.1'
 }
 
 if (JavaVersion.current().isJava8Compatible()) {
@@ -34,17 +36,17 @@ def versionDir = "$buildDir/version"
 
 // In this section you declare where to find the dependencies of your project
 repositories {
+  mavenCentral()
   maven { url "$defaultNexusRepo" }
-  maven { url "https://nexus.adaptris.net/nexus/content/groups/public" }
+  maven { url "$nexusBaseUrl/content/groups/public" }
   maven {
     credentials {
       username repoUsername
       password repoPassword
     }
-    url "https://nexus.adaptris.net/nexus/content/groups/private"
+    url "$nexusBaseUrl/content/groups/private"
   }
-  maven { url "https://nexus.adaptris.net/nexus/content/repositories/snapshots" }
-  maven { url "https://nexus.adaptris.net/nexus/content/repositories/releases" }
+  maven { url "$nexusBaseUrl/content/repositories/snapshots" }
 }
 
 
@@ -60,7 +62,14 @@ configurations {
   all*.exclude group: 'org.codehaus.woodstox'
   all*.exclude group: 'org.eclipse.jetty.orbit', module: 'javax.mail.glassfish'
 
-
+  // Exclude a bunch of netty things, so that we can use netty-all.
+  all*.exclude group: 'io.netty', module: 'netty-common'
+  all*.exclude group: 'io.netty', module: 'netty-resolver'
+  all*.exclude group: 'io.netty', module: 'netty-transport'
+  all*.exclude group: 'io.netty', module: 'netty-buffer'
+  all*.exclude group: 'io.netty', module: 'netty-codec'
+  all*.exclude group: 'io.netty', module: 'netty-codec-http'
+  all*.exclude group: 'io.netty', module: 'netty-handler'
 }
 
 configurations.all {
@@ -73,6 +82,7 @@ dependencies {
   compile ("com.adaptris:interlok-csv:$interlokCoreVersion") { changing=true}
   compile ("org.elasticsearch:elasticsearch:5.2.2")
   compile ("org.elasticsearch.plugin:transport-netty4-client:5.2.2") {
+      exclude group: 'io.netty', module: 'netty-common'
       exclude group: 'io.netty', module: 'netty-buffer'
       exclude group: 'io.netty', module: 'netty-codec'
       exclude group: 'io.netty', module: 'netty-codec-http'
@@ -80,7 +90,7 @@ dependencies {
       exclude group: 'io.netty', module: 'netty-transport'
       exclude group: 'io.netty', module: 'netty-resolver'
   }
-  compile ("io.netty:netty-all:4.1.9.Final")
+  compile ("io.netty:netty-all:4.1.31.Final")
   compile ("com.jayway.jsonpath:json-path:2.4.0")
   compile ("com.fasterxml.jackson.core:jackson-databind:2.9.7")
   annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
@@ -88,9 +98,9 @@ dependencies {
   testCompile ('junit:junit:4.12')
   testCompile ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing= true}
   testCompile ("pl.allegro.tech:embedded-elasticsearch:2.1.0")
-  testCompile ("org.apache.logging.log4j:log4j-core:2.8.1")
-  testCompile ("org.apache.logging.log4j:log4j-1.2-api:2.8.1")
-  testCompile ("org.apache.logging.log4j:log4j-api:2.8.1")
+  testCompile ("org.apache.logging.log4j:log4j-core:$log4j2Version")
+  testCompile ("org.apache.logging.log4j:log4j-1.2-api:$log4j2Version")
+  testCompile ("org.apache.logging.log4j:log4j-api:$log4j2Version")
 
   javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
 
