--- a/build.gradle
+++ b/build.gradle
@@ -61,15 +61,6 @@ configurations {
   all*.exclude group: 'net.sf.saxon', module: 'saxon'
   all*.exclude group: 'org.codehaus.woodstox'
   all*.exclude group: 'org.eclipse.jetty.orbit', module: 'javax.mail.glassfish'
-
-  // Exclude a bunch of netty things, so that we can use netty-all.
-  all*.exclude group: 'io.netty', module: 'netty-common'
-  all*.exclude group: 'io.netty', module: 'netty-resolver'
-  all*.exclude group: 'io.netty', module: 'netty-transport'
-  all*.exclude group: 'io.netty', module: 'netty-buffer'
-  all*.exclude group: 'io.netty', module: 'netty-codec'
-  all*.exclude group: 'io.netty', module: 'netty-codec-http'
-  all*.exclude group: 'io.netty', module: 'netty-handler'
 }
 
 configurations.all {
@@ -81,16 +72,7 @@ dependencies {
   compile ("org.slf4j:slf4j-api:$slf4jVersion")
   compile ("com.adaptris:interlok-csv:$interlokCoreVersion") { changing=true}
   compile ("org.elasticsearch:elasticsearch:5.2.2")
-  compile ("org.elasticsearch.plugin:transport-netty4-client:5.2.2") {
-      exclude group: 'io.netty', module: 'netty-common'
-      exclude group: 'io.netty', module: 'netty-buffer'
-      exclude group: 'io.netty', module: 'netty-codec'
-      exclude group: 'io.netty', module: 'netty-codec-http'
-      exclude group: 'io.netty', module: 'netty-handler'
-      exclude group: 'io.netty', module: 'netty-transport'
-      exclude group: 'io.netty', module: 'netty-resolver'
-  }
-  compile ("io.netty:netty-all:4.1.31.Final")
+  compile ("org.elasticsearch.plugin:transport-netty4-client:5.2.2")
   compile ("com.jayway.jsonpath:json-path:2.4.0")
   compile ("com.fasterxml.jackson.core:jackson-databind:2.9.7")
   annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
